tests/NormalTests/paczka1/small_fuzzy/99732345.err
Error in line 2: DPExjHSNwO A654 40,2
Error in line 6: A654 A462 23,7
Error in line 10: DPExjHSNwO A955 35,9
